[package]
name = "rustyimage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = { version = "4.1.6", features = ["derive"] }
colorsys = "0.6.7"
filetime = "0.2.20"
imgproc-rs = "0.3.0"
json = "0.12.4"
kamadak-exif = "0.5.5"
lazy_static = "1.4.0"
libheif-rs = "0.16.0"

[[bin]]
name="rustyimage"
path="src/main.rs"
